--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,14 @@
 
 <!-- Intro Start -->
-
-<header class="intro">
+<!-- <div class="canvas-wrap">
+    <div class="canvas-content">
+        <h1>Hello world</h1>
+    </div>
+    <div id="canvas" class="gradient"></div>
+</div> -->
+<header class="intro canvas-wrap">
   <div class="intro-body">
-    <div class="container">
+    <div class="container canvas-content">
       <div class="row">
           <div class="col-md-10 col-md-offset-1">
             <h1 class="brand-heading">&nbsp;</h1>
@@ -14,9 +19,10 @@
               <img class="img-me" src="{{site.baseurl}}{{ site.me-img }}" alt="">
             </a>
           </div>
-        </div>
+      </div>
     </div>
   </div>
+  <div id="canvas" class="gradient"></div>
 </header>
 
 <!-- Intro End -->
