--- a/_includes/js.html
+++ b/_includes/js.html
@@ -10,6 +10,17 @@
 <!-- Plugin JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 
+<!-- Animation -->
+<script src="{{site.baseurl}}/js/3d-lines-animation/three.min.js"></script>
+<!-- Animation - Helpers -->
+<script src="{{site.baseurl}}/js/3d-lines-animation/projector.js"></script>
+<script src="{{site.baseurl}}/js/3d-lines-animation/canvas-renderer.js"></script>
+<!-- Animation - Visualitzation adjustments -->
+<script src="{{site.baseurl}}/js/3d-lines-animation/3d-lines-animation.js"></script>
+<!-- Animated - background color -->
+<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script> -->
+<script src="{{site.baseurl}}/js/3d-lines-animation/color.js"></script>
+
 <!-- Custom Theme JavaScript -->
 <!--* Start Bootstrap - Grayscale Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
