--- a/css/grayscale.scss
+++ b/css/grayscale.scss
@@ -186,6 +186,14 @@ a {
     }
 }
 
+#canvas{
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
 @-webkit-keyframes pulse {
     from {
         -webkit-transform: scale(1);
