--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -10,7 +10,15 @@
         <div class="col-md-10 col-md-offset-1">
           {% include swipe-instructions.html %}
           <h1><strong>{{ page.title }}</strong></h1>
-          <h4><strong>{{ page.date | date_to_string }}</strong>
+          <h4>
+            <strong>
+              {% if page.deadline %}
+                {% assign deadline = page.deadline %}
+              {% else %}
+                {% assign deadline = 'Now' %}
+              {% endif %}
+              {{ page.date | date: "%Y-%d-%m" }} ~ {{ deadline }}
+            </strong>
             <small> . {{ page.category }} . <a href="{{site.baseurl}}{{page.url }}#disqus_thread">Comments</a>
             {% for tag in page.tags %}
               <a href="{{site.baseurl}}/tags/{{tag}}.html">#{{ tag }}</a>
